--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId 'com.thesaifhusain.note'
         minSdk 21
         targetSdk 34
-        versionCode 1
-        versionName "1.0"
+        versionCode 11
+        versionName '1.1'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -90,5 +90,7 @@ dependencies {
     kapt("androidx.room:room-compiler:2.5.2")
 
     implementation("androidx.compose.material:material-icons-extended-android:1.6.0-alpha03")
+
+    implementation("com.google.errorprone:error_prone_annotations:2.15.0")
 
 }
