--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
+    id("com.google.devtools.ksp")
 }
 
 android {
@@ -13,8 +13,8 @@ android {
         applicationId 'com.thesaifhusain.note'
         minSdk 21
         targetSdk 34
-        versionCode 11
-        versionName '1.1'
+        versionCode 12
+        versionName '1.2'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -30,8 +30,8 @@ android {
         }
 
         debug {
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -44,9 +44,10 @@ android {
     }
     buildFeatures {
         compose true
+        buildConfig true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.1'
+        kotlinCompilerExtensionVersion '1.5.3'
     }
     packagingOptions {
         resources {
@@ -57,12 +58,12 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.12.0-rc01'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
     implementation 'androidx.activity:activity-compose:1.7.2'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.2.0-alpha05'
+    implementation 'androidx.compose.material3:material3:1.2.0-alpha08'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -70,27 +71,27 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     //added
-    implementation 'androidx.compose.runtime:runtime-livedata:1.6.0-alpha03'
+    implementation 'androidx.compose.runtime:runtime-livedata:1.6.0-alpha07'
     // Dependency Injection
-    implementation("com.google.dagger:hilt-android:2.47")
-    kapt("com.google.dagger:hilt-android-compiler:2.47")
+    implementation('com.google.dagger:hilt-android:2.48.1')
+    ksp('com.google.dagger:hilt-android-compiler:2.48.1')
     implementation("androidx.hilt:hilt-work:1.0.0")
-    kapt("androidx.hilt:hilt-compiler:1.0.0")
+    ksp("androidx.hilt:hilt-compiler:1.1.0-beta01")
     implementation("androidx.work:work-runtime-ktx:2.8.1")
     implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
     implementation('org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3')
-    //Navigation
-    implementation('androidx.navigation:navigation-compose:2.7.0')
+    //navigation
+    implementation('androidx.navigation:navigation-compose:2.7.3')
     //Room
     implementation("androidx.room:room-runtime:$room_version")
     implementation("androidx.room:room-ktx:$room_version")
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor("androidx.room:room-compiler:$room_version")
     implementation("androidx.room:room-ktx:$room_version")
-    kapt("androidx.room:room-compiler:2.5.2")
+    ksp("androidx.room:room-compiler:2.5.2")
 
-    implementation("androidx.compose.material:material-icons-extended-android:1.6.0-alpha03")
+    implementation('androidx.compose.material:material-icons-extended-android:1.6.0-alpha06')
 
-    implementation("com.google.errorprone:error_prone_annotations:2.15.0")
+    implementation('com.google.errorprone:error_prone_annotations:2.22.0')
 
 }
