--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 buildscript {
     ext {
-        compose_version = '1.5.0'
-        room_version = '2.6.0-alpha03'
+        compose_version = '1.6.0-alpha07'
+        room_version = '2.6.0-rc01'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '8.1.1' apply false
-    id 'com.android.library' version '8.1.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
-    id 'com.google.dagger.hilt.android' version '2.47' apply false
+    id 'com.android.application' version '8.2.0-beta06' apply false
+    id 'com.android.library' version '8.2.0-beta06' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.10' apply false
+    id 'com.google.dagger.hilt.android' version '2.48.1' apply false
+    id("com.google.devtools.ksp") version "1.9.10-1.0.13" apply false
 }
