--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
     ext {
-        compose_version = '1.6.0-alpha07'
-        room_version = '2.6.0-rc01'
+        compose_version = ' 1.6.0-beta03'
+        room_version = '2.6.1'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '8.2.0' apply false
     id 'com.android.library' version '8.2.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.10' apply false
-    id 'com.google.dagger.hilt.android' version '2.48.1' apply false
+    id 'com.google.dagger.hilt.android' version '2.49' apply false
     id("com.google.devtools.ksp") version "1.9.10-1.0.13" apply false
 }
